updated button thing

--- a/Weird-Reddit/index.html
+++ b/Weird-Reddit/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <link rel='stylesheet' href='assets/css/wise.css'>
     <script src='assets/js/artyom.min.js'></script>
+    <script src="assets/js/fetch.js"></script>
 </head>
 
 <body id="start">
