--- a/Weird-Reddit/index.html
+++ b/Weird-Reddit/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.6 user-scalable=no">
     <title>Wierd Reddit</title>
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
-    <link rel='stylesheet' href='assets/css/wise.css'>
+    <link rel='stylesheet' href='assets/css/weird.css'>
     <script src='assets/js/artyom.min.js'></script>
     <script src="assets/js/fetch.js"></script>
 </head>
@@ -27,14 +27,12 @@
         </button>
 
     </div>
-
-
+    <div id="footer">
+        <a href="https://github.com/impshum/Wise-Reddit" target="_blank">sauce</a>
     </div>
-    <script src='assets/js/wisereddit.js'></script>
+
+    <script src='assets/js/weirdreddit.js'></script>
 
 </body>
-<!--footer>
-    <p><a href="https://github.com/sacert/Wise-Reddit">Kang</a> / <a href="https://github.com/impshum/Wise-Reddit">impshum</a>
-</footer-->
 
 </html>
