--- a/Weird-Reddit/index.html
+++ b/Weird-Reddit/index.html
@@ -28,7 +28,7 @@
 
     </div>
     <div id="footer">
-        <a href="https://github.com/impshum/Wise-Reddit" target="_blank">sauce</a>
+        <a href="https://github.com/impshum/weird-reddit" target="_blank">sauce</a>
     </div>
 
     <script src='assets/js/weirdreddit.js'></script>
