--- a/Weird-Reddit/index.html
+++ b/Weird-Reddit/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=0.6 user-scalable=no">
-    <title>Wierd Reddit</title>
+    <title>Weird Reddit</title>
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <link rel='stylesheet' href='assets/css/weird.css'>
     <script src='assets/js/artyom.min.js'></script>
@@ -12,7 +12,7 @@
 
 <body id="start">
     <div id="snoo"></div>
-    <div id="wierd-reddit">Wierd Reddit
+    <div id="wierd-reddit">Weird Reddit
         <hr id="underline">
     </div>
 
